# NeuralNetwork

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
ActivationFunction/: ActivationFunction.h  ActivationFunctionFactory.h  Logistic.h  Softmax.h
CostFunction/: CostFunction.h  CostFunctionFactory.h  CrossEntropy.h  QuadraticCostFunction.h
Network/: Layer.h  Manager.h  Network.h  NetworkBuilder.h
Optimizer/: Optimizer.h  OptimizerFactory.h  StochasticGradientDescent.h
Reader/: CSVReader.h
